# duckrabbit-backend

./: README.md  app.py  pyproject.toml
.github/workflows/: aws-deploy.yml
cdk/: constructs.py  stacks.py
src/lambdas/authorizer/: handler.py
src/schema/: schema.gql
